# SongsterrMCP

./: README.md  pyproject.toml
docs/: ALGORITHM.md
src/songsterr_mcp/: __init__.py  ascii_tab.py  client.py  gp_io.py  refinger.py  server.py  tuning.py
tests/: test_gp_roundtrip.py  test_refinger.py
