[project]
name = "songsterr-mcp"
version = "0.1.0"
description = "MCP server for fetching Songsterr tabs and transposing them between tunings and string counts"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pyguitarpro>=0.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
songsterr-mcp = "songsterr_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/songsterr_mcp"]
